--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://chat-develop.one.th/static/javascript/v1/onechat_bluetooth.js" type="text/javascript"></script>
   </head>
   <body>
     <noscript>
@@ -15,3 +16,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
